# virtualBrain

./: .gitignore  README.md  architecture_v1.md  metadataSchemaDesign.md
app/authService/: config.py  loginHandler.py  main.py  pyproject.toml  refreshHandler.py  requirements.txt
app/authService/database/: 001_init_auth_db.sql  __init__.py  db.py  refresh_token.sql  refresh_token_repository.py  user_repository.py
app/authService/httpResponseTemplates/: error_templates.py
app/authService/loginService/: __init__.py  loginHandler.py
app/authService/logoutService/: __init__.py  logoutHandler.py
app/authService/models/: __init__.py  httpRequestModels.py
app/authService/refreshAccessTokenService/: __init__.py  refreshHandler.py
app/authService/registerService/: __init__.py  registerHandler.py
app/authService/utils/: __init__.py  passwordHasher.py  tokenGenerator.py  tokenHasher.py
app/orchestratorService/: package-lock.json  package.json  server.js
app/orchestratorService/authServices/loginService/: loginServiceHandler.js
app/orchestratorService/authServices/logoutService/: logoutServiceHandler.js
app/orchestratorService/authServices/refreshService/: refreshServiceHandler.js
app/orchestratorService/authServices/registerService/: registerServiceHandler.js
app/orchestratorService/authServices/utils/: authCredentialProxy.js
app/orchestratorService/httpResponseTemplates/: errorTemplates.js
app/orchestratorService/userServices/ingestService/: ingestServiceHandler.js
app/orchestratorService/utils/authService/: verifyAccessToken.js
