[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=5.0.0",
    "dotenv>=0.9.9",
    "email-validator>=2.3.0",
    "fastapi>=0.136.0",
    "openai>=2.32.0",
    "psycopg[binary]>=3.2.10",
    "pyjwt>=2.12.1",
]
